# SKSE-Menu-Framework-2

./: CMakeLists.txt  README.md  Usage.md  vcpkg.json
cmake/: headerlist.cmake  sourcelist.cmake
cmake/lib/: copyOutputs.cmake
include/: Application.h  Config.h  File.h  FontManager.h  Hooks.h  Input.h  Renderer.h  SKSEMenuFramework.h  StyleManager.h  Textures.h  UI.h  WindowManager.h  logger.h
src/: Application.cpp  Config.cpp  FontManager.cpp  Hooks.cpp  Input.cpp  Renderer.cpp  SKSEMenuFramework.cpp  StyleManager.cpp  Textures.cpp  UI.cpp  WindowManager.cpp  cimgui.cpp  plugin.cpp
